# CodeSentinel

./: Dockerfile  README.md  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  sample_inference.py
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/: app.py
simulator/: __init__.py  api_extractor.py  codebase.py  vuln_patterns.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
