[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesentinel"
version = "1.0.0"
description = "OpenEnv RL environment – AI agent analyses Python codebases for API endpoints, call flows, and security vulnerabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = ["httpx", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simulator*", "tasks*", "graders*"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml"]
